--- a/sass/blocks/_menu.scss
+++ b/sass/blocks/_menu.scss
@@ -1,4 +1,32 @@
 .menu {
-	box-shadow: 0 0 30px rgba(194, 201, 206, 0.5), 0 0 14px rgba(194, 201, 206, 0.3);
-	background-color: #f6c300;
+	box-shadow: 0 -10px 30px rgba(194, 201, 206, 0.5), 0 0 14px rgba(194, 201, 206, 0.3);
+	background-color: $orange;
+	padding: 70px 0;
+	color: $white;
+
+	@include wave-top ($orange);
+}
+
+.menu__title {}
+
+.tabs__list {}
+
+.tabs__list {
+	text-align: center;
+	display: flex;
+	justify-content: space-around;
+}
+
+.tabs__item {
+	max-width: 220px;
+	text-align:center;
+	vertical-align: top;
+	display: inline-block;
+}
+
+.tabs__item__title {
+	font-family: $futura-demi;
+	font-size: 25px;
+	font-weight: 400;
+	display: inline-block;
 }
