--- a/templates/blocks/advantages.html
+++ b/templates/blocks/advantages.html
@@ -1,3 +1,35 @@
 <section id="advantages" class="advantages">
-	<button class="advantages__button">Замовити дегустацію</button>
+	<div class="advantages__wrap">
+		
+		<figure class="advantages__item">
+			<i class="icon icon--formula"></i>
+			<figcaption class="advantages__item__caption">
+				<h4>Оригінальный рецепт</h4>
+				<p>Кожна страва створена за оригінальним рецептом, поєднуючи в собі кухні багатьох країн світу.</p>
+			</figcaption>
+		</figure>
+		<figure class="advantages__item">
+			<i class="icon icon--health"></i>
+			<figcaption class="advantages__item__caption">
+				<h4>Здорова їжа</h4>
+				<p>Чим ближче продукт до свого природного стану, тим більше користі він принесе вам. Ми ильнуємо за якістю продуктів.</p>
+			</figcaption>
+		</figure>
+		<figure class="advantages__item">
+			<i class="icon icon--quality"></i>
+			<figcaption class="advantages__item__caption">
+				<h4>Якісні продукти</h4>
+				<p>Ми співпрацюємо тільки з тими постачальниками, яких перевірили, і не заощаджуємо на продуктах.</p>
+			</figcaption>
+		</figure>
+		<figure class="advantages__item">
+			<i class="icon icon--delivery"></i>
+			<figcaption class="advantages__item__caption">
+				<h4>Щоденна доставка</h4>
+				<p>Продукція поставляється виключно в день її приготування з 8 до 11 годин</p>
+			</figcaption>
+		</figure>
+
+	</div>
+	<button class="btn btn--xl">Замовити дегустацію</button>
 </section>
