--- a/templates/blocks/clients.html
+++ b/templates/blocks/clients.html
@@ -1,3 +1,12 @@
 <section class="clients">
 	<h3 class="title">Вже люблять FRED</h3>
+	<div class="clients__wrap">
+		<i class="icon icon--datahub"></i>
+		<i class="icon icon--projector"></i>
+		<i class="icon icon--ebsh"></i>
+		<i class="icon icon--chasopis"></i>
+		<i class="icon icon--freespace"></i>
+		<i class="icon icon--ciferblat"></i>
+	</div>
+
 </section>
