--- a/templates/blocks/offers.html
+++ b/templates/blocks/offers.html
@@ -1,3 +1,39 @@
 <section id="offers" class="offers">
-	<h3 class="title">FRED пропонує</h2>
+	<h3 class="title">FRED пропонує</h3>
+	<div class="offers__wrap">
+
+		<figure class="offers__item">
+			<button id="machine-offers" class="btn btn--circle">
+				<i class="icon icon--machine"></i>
+			</button>
+			<figcaption class="offers__item__caption">
+				<label for="machine-offers">Вендінгові автомати</label>
+			</figcaption>
+		</figure>
+		<figure class="offers__item">
+			<button  id="delivery-offers" class="btn btn--circle">
+				<i class="icon icon--corpdelivery"></i>
+			</button>
+			<figcaption class="offers__item__caption">
+				<label for="delivery-offers">Корпоративна доставка</label>
+			</figcaption>
+		</figure>
+		<figure class="offers__item">
+			<button id="cafe-offers" class="btn btn--circle">
+				<i class="icon icon--cafe"></i>
+			</button>
+			<figcaption class="offers__item__caption">
+				<label for="cafe-offers">Кафе здорової їжі</label>
+			</figcaption>
+		</figure>
+		<figure class="offers__item">
+			<button id="catering-offers" class="btn btn--circle">
+				<i class="icon icon--catering"></i>
+			</button>
+			<figcaption class="offers__item__caption">
+				<label for="catering-offers">Кейтерінг</label>
+			</figcaption>
+		</figure>
+		
+	</div>
 </section>
