--- a/templates/blocks/share.html
+++ b/templates/blocks/share.html
@@ -1,3 +1,16 @@
 <section class="share">
 	<h3 class="title">Поділись з другом</h3>
+	<div class="container">
+		<div class="col-rt">
+			<p class="question">
+			Бажаєш, щоб твої друзі залишалися ситими і здоровими?
+			</p>
+			<p class="reply">
+			Ми з радістю допоможемо тобі!
+			</p>
+			<p class="reply-caption">
+			Розмісти своє фото з нашим сандвічем на своїй сторінці у соціальній мережі і вкажи ім’я друга, якого бажаєш пригостити. Якщо твій запис збере 50 лайків, ми безкоштовно пригостимо тебе і твого друга набором з сандвічей та десертів.
+			</p>
+		</div>
+	</div>
 </section>
