--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,15 +1,17 @@
 <footer class="footer">
-	<div class="contact-list">
-		<a class="contact-list__item" href="tel: +38099385433">
-			(099) 385 4 333
-		</a>
-		<a class="contact-list__item" href="mailto: sales@fredandfresh.com">
-			sales@fredandfresh.com
-		</a>
-	</div>
-	<div class="social-list">
-		<a href="https://facebook.com/" class="social-list__item icon icon--facebook"></a>
-		<a href="https://instagram.com/" class="social-list__item icon icon--instagram"></a>
-		<a href="https://twitter.com/" class="social-list__item icon icon--twitter"></a>
+	<div class="footer__wrap">
+		<div class="contact-list">
+			<a class="contact-list__item" href="tel: +38099385433">
+				(099) 385 4 333
+			</a>
+			<a class="contact-list__item" href="mailto: sales@fredandfresh.com">
+				sales@fredandfresh.com
+			</a>
+		</div>
+		<div class="social-list">
+			<a href="https://facebook.com/" class="social-list__item icon icon--facebook"></a>
+			<a href="https://instagram.com/" class="social-list__item icon icon--instagram"></a>
+			<a href="https://twitter.com/" class="social-list__item icon icon--twitter"></a>
+		</div>
 	</div>
 </footer>
