--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,17 +1,42 @@
 .footer {
-	color: $light;
-	box-shadow: 0 0 30px rgba(194, 201, 206, 0.5), 0 0 14px rgba(194, 201, 206, 0.3);
-	background-color: #252525;
-	padding: 0 220px;
+	position: relative;
+	color: $white;
+	box-shadow: 0 -10px 30px rgba(194, 201, 206, 0.5), 0 0 14px rgba(194, 201, 206, 0.3);
+	background-color: $dark-gray;
 	font-size: 25px;
-	line-height: 2;
-	@extend .clearfix;
+
+	@include wave-top ($dark-gray);
+}
+
+.footer__wrap {
+	display: flex;
+	justify-content:space-around;
+	align-items: center;
+	height:170px;
+
+	// @include center-block (1040px);
 }
 
 .contact-list {
-	float:left;
+	width: 40%;
+}
+
+.contact-list__item {
+	margin-right: 42px;
+
+	&:last-child {
+		margin-right: 0;
+	}
 }
 
 .social-list {
-	float:right;
+	width: 20%;
+}
+
+.social-list__item {
+	margin-right: 32px;
+
+	&:last-child {
+		margin-right: 0;
+	}
 }
