--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,47 +1,85 @@
 .header {
 	background-image: url('../images/header-bg.jpg');
-	color: $light;
-	padding: 0 ($width - 1000px)/2;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center top;
+	color: $white;
+	height: 600px;
+	position: relative;
+	text-align: center;
 }
 
 .header__wrap {
-	font-family: 'Futura Book C', sans-serif;
+	font-family: $futura-book;
 	font-weight: 300;
 	font-size: 20px;
 	line-height: 1.5;
-	text-align: center;
-	padding: 24px 0;
-	max-width: 1000px;
-	margin: 0 auto;
-	@extend .clearfix;
+	position: absolute;
+	z-index: 10;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 75px;
+	display: flex;
+	justify-content:space-around;
+	align-items: center;
+
+	@include center-block (1040px);
+
+	&::before {
+		content: '';
+		display: block;
+		position: absolute;
+		z-index: -1;
+		top:0;
+		left:0;
+		right:0;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.5);
+		box-shadow: 0 -1px 35px rgba(2, 4, 5, 0.75);
+		filter: blur(10px);
+	}
 }
 
 .nav {
-	float: left;
+	// float: left;
+	display: flex;
+	justify-content:space-around;
+	min-width: 600px;
 }
 
 .nav__link {
-	margin-right: 54px;
-	&:last-child {margin-right: 0;}
+	// margin-right: 54px;
+	// margin-right: 48px;
+	
+	&:last-child {
+		margin-right: 0;
+	}
 }
 
 .logo__wrap {
+	position: absolute;
+	top: 50%;
+	left: 0;
+	right: 0;
+	padding-left: 50%;
+    transform: translateY(-50%);
 }
 
 .logo {
-	color: $light;
-	font-family: "Futura Futuris C", sans-serif;
+	color: $white;
+	font-family: $futura-futuris;
 	font-size: 103px;
 	font-weight: 700;
+	text-align: left;
 	text-transform: uppercase;
 	letter-spacing: -2.8px;
-	margin: 0;
+	display: inline-block;
 }
 
 .logo-caption {
 	color: #1cc257;
 	font-size: 42px;
-	font-family: 'EB Garamond', serif;
+	font-family: $garamond;
 	font-style: italic;
-	margin: 0;
 }
