--- a/sass/components/_reset.scss
+++ b/sass/components/_reset.scss
@@ -1,4 +1,5 @@
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5,
+html,
+body, div, span, applet, object, iframe, h1, h2, h3, h4, h5,
 h6, p, blockquote, pre, a, abbr, acronym, address, big,
 cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small,
 strike, strong, tt, var, b, u, i, center, dl, dt,
@@ -36,16 +37,6 @@ article, aside, details, figcaption, figure, footer, header, main, nav, section,
   display: block;
 }
 
-audio, canvas, progress, video {
-  display: inline-block;
-  vertical-align: baseline;
-}
-
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-
 img,
 fieldset,
 a img {
@@ -57,24 +48,6 @@ img {
   width: 100%;
   height: auto;
   vertical-align: middle;
-}
-
-svg {
-  vertical-align: middle;
-}
-
-svg > path {
-  transition: fill 0.5s ease;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-a:active, a:hover {
-  outline: 0;
-  text-decoration: none;
 }
 
 input[type="submit"],
@@ -89,7 +62,6 @@ button::-moz-focus-inner {
 }
 
 textarea {
-  font-family: 'Roboto', Arial, sans-serif;
   overflow: auto;
 }
 
@@ -98,32 +70,6 @@ input, button, textarea {
   padding: 0;
   background: 0;
   border: 0;
-}
-
-input,
-textarea {
-  resize: none;
-  user-select: text;
-}
-
-input {
-  -webkit-appearance: button;
-}
-
-input[type="date"]::-webkit-calendar-picker-indicator {
-  display: none;
-}
-
-input:-webkit-autofill,
-textarea:-webkit-autofill,
-select:-webkit-autofill {
-  background-color: #fff !important;
-  color: #000 !important;
-}
-
-input, textarea, select, button,
-h1, h2, h3, h4, h5, h6, a, span, a:focus {
-  outline: none;
 }
 
 ul {
@@ -139,11 +85,6 @@ table {
 td, th {
   padding: 0;
   vertical-align: middle;
-}
-
-code, kbd, pre, samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
 }
 
 label {
