--- a/templates/blocks/map.html
+++ b/templates/blocks/map.html
@@ -1,3 +1,4 @@
 <section class="map">
-	<h3 class="title">FRED на карті</h2>
+	<h3 class="title">FRED на карті</h3>
+	<div id="map"></div>
 </section>
