--- a/templates/blocks/menu.html
+++ b/templates/blocks/menu.html
@@ -1,3 +1,42 @@
 <section id= "menu" class="menu">
-	<h3 class="menu__title title">FRED меню</h3>
+	<h3 class="title">FRED меню</h3>
+	<div class="tabs__list">
+
+		<figure class="tabs__item">
+			<button id="soup" class="btn btn--circle">
+				<i class="icon icon--soup"></i>
+			</button>
+			<figcaption class="tabs__item__title">
+				<label for="soup">Супи</label>
+			</figcaption>
+		</figure>
+
+		<figure class="tabs__item">
+			<button id="sandwich" class="btn btn--circle">
+				<i class="icon icon--sandwich"></i>
+			</button>
+			<figcaption class="tabs__item__title">
+				<label for="sandwich">Сандвічі</label>
+			</figcaption>
+		</figure>
+
+		<figure class="tabs__item">
+			<button id="salad" class="btn btn--circle">
+				<i class="icon icon--salad"></i>
+			</button>
+			<figcaption class="tabs__item__title">
+				<label for="salad">Салати</label>
+			</figcaption>
+		</figure>
+
+		<figure class="tabs__item">
+			<button id="dessert" class="btn btn--circle">
+				<i class="icon icon--dessert"></i>
+			</button>
+			<figcaption class="tabs__item__title">
+				<label for="dessert">Десерти</label>
+			</figcaption>
+		</figure>
+		
+	</div>	
 </section>
