--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,5 @@
 <header class="header">
+
 	<div class="header__wrap">
 		<nav class="nav">
 			<a href="/" class="nav__link link">Головна</a>
@@ -7,11 +8,14 @@
 			<a href="#" class="nav__link link">Замовити</a>
 			<a href="#" class="nav__link link">Контакти</a>
 		</nav>
-		<a href="#" class="btn btn--mini">Замовити дегустацію</a>
+		<button class="btn btn--s">Замовити дегустацію</button>
 		<a href="#" class="link link--login">Увійти</a>
 	</div>
+
+	
 	<div class="logo__wrap">
 		<h2 class="logo">Fred&<br>Fresh</h2>
 		<p class="logo-caption">Healthy Natural Food</p>
 	</div>
+
 </header>
